# Lab1_Integer-Set

./: docker-compose.yml  meson.build
include/core/: IntegerSet.hpp
include/mocks/: MockSetRepository.hpp
include/storage/: ISetRepository.hpp  IntegerSetSerializer.hpp  PostgresRepository.hpp
include/ui/common/: WrapCore.hpp
include/ui/console/: ConsoleWrap.hpp  ConsoleWrapCore.hpp  ConsoleWrapUI.hpp
include/ui/gtkmm/: CreateSetDialog.hpp  LoadSetDialog.hpp  SetMainWindow.hpp  SetWindow.hpp
src/core/: IntegerSet.cpp
src/storage/: IntegerSetSerializer.cpp  PostgresRepository.cpp
src/ui/common/: WrapCore.cpp
src/ui/console/: ConsoleWrap.cpp  ConsoleWrapCore.cpp  ConsoleWrapUI.cpp  main.cpp
src/ui/gtkmm/: CreateSetDialog.cpp  LoadSetDialog.cpp  SetMainWindow.cpp  SetWindow.cpp  main.cpp
tests/: core_wrap_tests.cpp  set_tests.cpp  storage_tests.cpp  ui_input_tests.cpp  wrap_core_tests.cpp
tests/mocks/: MockSetRepository.hpp
